tests/Driver/cannot-open-file.sora
// RUN: sorac blargh.sora 2>&1 | FileCheck %s
// CHECK: error: could not load input file 'blargh.sora'
